Добавление кода в file_sharing, где в html добавляются теги с названием файлов

--- a/client/main-page/file_sharing.css
+++ b/client/main-page/file_sharing.css
@@ -61,3 +61,11 @@ main {
     margin-right: 15px;
     text-align: center;
 }
+
+.files {
+    margin-top: 30px;
+}
+
+.files p {
+    margin-top: 15px;
+}
